1999-02-20  Timur Bakeyev <mc@bat.ru>

	* gnome.m4: Added and exported ZVT_LIBS.

Tue Feb 16 19:35:42 1999  Owen Taylor  <otaylor@redhat.com>

	* gnome-x-checks.m4: Require GTK+-1.1.16.

1999-02-15  Timur Bakeyev <mc@bat.ru>

	* gnome-gettext.m4: Work around a bug in BSDI's native sh, which in-
	correctly expands ${LINGUAS=$ALL_LINGUAS}. Switched to if/fi variant.

1999-02-15  Chris Lahey  <clahey@umich.edu>

	* gnome-print-check.m4: Copied this from libhnj/libhnj.m4.  Almost
	completely replaced the old version.  The only usage difference is
	that it defines GNOME_PRINT_LIBS instead of GNOME_PRINT_LIB and
	defines GNOME_PRINT_CFLAGS as well.

1999-02-10  Martin Baulig  <martin@home-of-linux.org>

	* gnome-objc-checks.m4: Applied a patch from Kenneth Stailey;
	use $CFLAGS when invoking $OBJC so the user can add additional
	include paths.

1999-02-05  Martin Baulig  <martin@home-of-linux.org>

	* compiler-flags.m4: Don't add warning and compiler flags to
	the CFLAGS and CXXFLAGS when they're cached. This fixes the
	problem that CFLAGS and CXXFLAGS get longer and longer each
	time you run a `config.status --recheck'.

1999-02-04  Martin Baulig  <martin@home-of-linux.org>

	* aclocal-include.m4 (INSIDE_GNOME_COMMON): New automake
	conditional that's always false.

	* gnome-common.m4: New file. This defines a `GNOME_COMMON_INIT'
	macro that should be used in all GNOME Applications outside
	the CVS tree.

	* Makefile.am: If we are `INSIDE_GNOME_COMMON', install all
	$(MACROS), autogen.sh, gnome-common.m4 and a newly created
	gnome-macros.dep in `$(datadir)/aclocal/gnome'.

1999-01-24  Timur Bakeyev <mc@bat.ru>

	* gnome-pthread-check.m4: Add recognition of 2 more libraries - 
	pthreads and pthread-support build in libc (as on BSDI).

1999-01-23  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-checks.m4 (GNOME_LIBGTOP_DOCU): New macro. This
	checks whether you have the LibGTop documentation installed and